# pauron

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yaml  update-aur-packages.yaml
