[project]
name = "pauron"
version = "0.1.4"
description = "AUR Automation Bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
]

[project.scripts]
pauron = "main:main"

[tool.setuptools]
py-modules = ["main"]

[dependency-groups]
dev = ["ruff>=0.15.7"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
